--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,8 +1,8 @@
 name: Deploy PR previews
 
 on:
-  # This workflow requires pull_request and won't work with pull_request_target 
-  # due to github permissions 
+  # This workflow requires pull_request and won't work with pull_request_target
+  # due to github permissions
   pull_request:
     types:
       - opened
@@ -37,7 +37,7 @@ jobs:
         uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: .vitepress/dist
-          deploy-repository: rollkit/docs-preview
+          deploy-repository: evstack/docs-preview
           token: ${{ secrets.PREVIEW_DEPLOY }}
           preview-branch: main
           umbrella-dir: .
