--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
+  "name": "evolve-docs",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
     "preview": "vitepress preview"
   },
   "devDependencies": {
-    "i": "^0.3.7",
     "mermaid": "^11.8.1",
+    "terser": "^5.43.1",
     "vitepress": "^1.5.0",
     "vitepress-plugin-mermaid": "^2.0.17"
-  },
-  "dependencies": {
-    "node-fetch": "^3.3.2"
   },
   "type": "module"
 }
